<resources>
    <string name="app_name">小黄驴电单车</string>
    <string name="me">我的</string>
    <string name="change_daynight_mode">切换日夜模式</string>
    <string name="changeLanguage">切换中英文</string>
    <string name="MVPSample">MVP页面模板</string>
    <string name="refresh_sample">刷新页面模板</string>
    <string name="toolbar_sample">Toolbar页面模板</string>
    <string name="follow_system">跟随系统</string>
    <string name="english">英文</string>
    <string name="edit_phone">输入手机号</string>
    <string name="edit_password">输入账号密码</string>
    <string name="login">登录</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码？</string>
    <string name="wechat">微信</string>
    <string name="alipay">支付宝</string>
    <string name="recommended_login">推荐登录</string>
    <string name="china_area_code">+86</string>
    <string name="verification_code">验证码</string>
    <string name="edit_verification_code">输入验证码</string>
    <string name="setting_password">设置密码</string>
    <string name="edit_setting_account_password">设置账号密码</string>
    <string name="again_password">确认密码</string>
    <string name="edit_again_password">再次输入密码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="no_account">无账号，</string>
    <string name="agreement">《小黄驴用户协议》</string>
    <string name="vehicle_agreement">《小黄驴用车协议》</string>
    <string name="phone_error">请输入正确的手机号</string>
    <string name="password_empty">密码不能为空</string>
    <string name="phone_empty">手机号不能为空</string>
    <string name="again_password_empty">请再次输入密码</string>
    <string name="again_password_error">密码不一致</string>
    <string name="code_empty">请输入正确的验证码</string>
    <string name="read_and_agree">我已阅读并同意</string>
    <string name="phone">手机号</string>
    <string name="next">下一步</string>
    <string name="find_password">找回密码</string>

    <string name="drawer_wallet">我的钱包</string>
    <string name="drawer_travel">我的行程</string>
    <string name="drawer_coupon">优惠券</string>
    <string name="drawer_join">招商加盟</string>
    <string name="drawer_maintain">维护保养</string>
    <string name="drawer_invite">邀请好友</string>
    <string name="drawer_exchange">外协换电</string>
    <string name="drawer_shop">驴币商城</string>
    <string name="drawer_setting">设置</string>

    <string name="userinfo_title">个人信息</string>
    <string name="userinfo_nickname">昵称</string>
    <string name="userinfo_name">姓名</string>
    <string name="userinfo_gender">性别</string>
    <string name="userinfo_birthday">出生日期</string>
    <string name="userinfo_real_name">实名认证</string>
    <string name="userinfo_bind_phone">绑定手机</string>
    <string name="userinfo_vip">会员身份</string>
    <string name="userinfo_bar_code">专属条码</string>
    <string name="userinfo_take_picture">拍照</string>
    <string name="userinfo_album">从手机相册选取</string>
    <string name="userinfo_man">男</string>
    <string name="userinfo_woman">女</string>
    <string name="userinfo_none">未选择</string>
    <string name="userinfo_has_real_name">已认证</string>
    <string name="userinfo_no_real_name">未通过，重新提交</string>
    <string name="userinfo_real_name_ing">审核中</string>
    <string name="userinfo_no_apply">未申请</string>
    <string name="userinfo_type_1">系统维护人员</string>
    <string name="userinfo_type_2">普通用户</string>
    <string name="userinfo_type_3">认购用户</string>
    <string name="scan_unlock">扫码解锁</string>
    <string name="my_message">我的信息</string>
    <string name="flashlight">打开手电筒</string>
    <string name="aim_vehicle_plate_qr_code">请对准车牌上的二维码</string>
    <string name="wait_unlock">等待解锁</string>
    <string name="electric_bike_opening">电动车正在开启中...</string>
    <string name="billing_mode">选择计费模式</string>
    <string name="timing_charge">计时收费</string>
    <string name="minute_billing">以分钟计费</string>
    <string name="immediate_use">立即使用</string>
    <string name="vehicle_fault">车辆故障</string>
    <string name="illegal_declaration">违规申报</string>
    <string name="online_service">在线客服</string>
    <string name="user_guide">用户指南</string>
    <string name="customer_service">客户服务</string>
    <string name="submit">提交</string>
    <string name="pay_arrears">支付</string>
    <string name="name">姓名</string>
    <string name="id_number">身份证号</string>
    <string name="edit_name">请输入真实姓名</string>
    <string name="edit_id_number">请输入身份证号码</string>
    <string name="name_error">请输入真实的姓名</string>
    <string name="id_error">请输入正确的身份证号码</string>
    <string name="please_check">请勾选</string>
    <string name="please_read_and_agree">请阅读并同意</string>
    <string name="open">去开启</string>

</resources>
