<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/lineColor">

    <LinearLayout
        android:id="@+id/mRootView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civHead"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_marginTop="22dp"
            android:src="@mipmap/userinfo_head" />

        <com.allen.library.SuperTextView
            android:id="@+id/stvNickname"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingHorizontal="10dp"
            app:sDividerLineType="none"
            app:sLeftTextColor="@color/text_black"
            app:sLeftTextSize="17sp"
            app:sLeftTextString="@string/userinfo_nickname"
            app:sRightIconRes="@mipmap/next_gray"
            app:sRightTextColor="@color/explainColor"
            app:sRightTextGravity="center"
            app:sRightTextSize="17sp" />

        <com.allen.library.SuperTextView
            android:id="@+id/stvName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingHorizontal="10dp"
            app:sDividerLineType="none"
            app:sLeftTextColor="@color/text_black"
            app:sLeftTextSize="17sp"
            app:sLeftTextString="@string/userinfo_name"
            app:sRightTextColor="@color/explainColor"
            app:sRightTextGravity="center"
            app:sRightTextSize="17sp" />

        <com.allen.library.SuperTextView
            android:id="@+id/stvGender"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingHorizontal="10dp"
            app:sDividerLineType="none"
            app:sLeftTextColor="@color/text_black"
            app:sLeftTextSize="17sp"
            app:sLeftTextString="@string/userinfo_gender"
            app:sRightIconRes="@mipmap/next_gray"
            app:sRightTextColor="@color/explainColor"
            app:sRightTextGravity="center"
            app:sRightTextSize="17sp" />

        <com.allen.library.SuperTextView
            android:id="@+id/stvBirthday"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingHorizontal="10dp"
            app:sDividerLineType="none"
            app:sLeftTextColor="@color/text_black"
            app:sLeftTextSize="17sp"
            app:sLeftTextString="@string/userinfo_birthday"
            app:sRightTextColor="@color/explainColor"
            app:sRightTextGravity="center"
            app:sRightTextSize="17sp" />

        <com.allen.library.SuperTextView
            android:id="@+id/stvRealName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingHorizontal="10dp"
            app:sDividerLineType="none"
            app:sLeftTextColor="@color/text_black"
            app:sLeftTextSize="17sp"
            app:sLeftTextString="@string/userinfo_real_name"
            app:sRightTextColor="@color/explainColor"
            app:sRightTextGravity="center"
            app:sRightTextSize="17sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/lineColor" />

        <com.allen.library.SuperTextView
            android:id="@+id/stvBindPhone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingHorizontal="10dp"
            app:sDividerLineType="none"
            app:sLeftTextColor="@color/text_black"
            app:sLeftTextSize="17sp"
            app:sLeftTextString="@string/userinfo_bind_phone"
            app:sRightIconRes="@mipmap/next_gray"
            app:sRightTextColor="@color/explainColor"
            app:sRightTextGravity="center"
            app:sRightTextSize="17sp" />

        <com.allen.library.SuperTextView
            android:id="@+id/stvVip"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingHorizontal="10dp"
            app:sDividerLineType="none"
            app:sLeftTextColor="@color/text_black"
            app:sLeftTextSize="17sp"
            app:sLeftTextString="@string/userinfo_vip"
            app:sRightTextColor="@color/explainColor"
            app:sRightTextGravity="center"
            app:sRightTextSize="17sp" />

        <com.allen.library.SuperTextView
            android:id="@+id/stvBarCode"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingHorizontal="10dp"
            android:visibility="gone"
            app:sDividerLineType="none"
            app:sLeftTextColor="@color/text_black"
            app:sLeftTextSize="17sp"
            app:sLeftTextString="@string/userinfo_bar_code"
            app:sRightIconHeight="43dp"
            app:sRightIconWidth="83dp" />

        <LinearLayout
            android:id="@+id/llBarCode"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="专属条码"
                android:textColor="@color/text_black"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/ivBarCode"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop" />
        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
