<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="38dp"
        android:paddingEnd="38dp"
        android:background="@color/white"
        android:layout_marginTop="2dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="34dp"
            android:gravity="center_horizontal"
            >
        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="@color/text_black"
                android:textSize="15sp"
                />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            >

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/tv_get_verification_code"
            >

        <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/edit_phone"
                    android:textSize="17sp"
                    android:inputType="phone"
                    android:textColorHint="@color/hint_gray"
                    />
            </android.support.design.widget.TextInputLayout>

            <com.ruanjie.donkey.widget.TimerTextView
                android:id="@+id/tv_get_verification_code"
                android:layout_width="84dp"
                android:layout_height="28dp"
                android:layout_alignParentEnd="true"
                android:textColor="@color/text_black"
                android:textSize="@dimen/sp_12"
                android:background="@drawable/selector_timer"
                android:layout_centerVertical="true"
                />
            </RelativeLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_gray"
            />
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="40dp"
            >
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_verification_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verification_code"
                android:textColor="@color/text_black"
                android:textSize="15sp"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                >

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_verification_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/edit_verification_code"
                    android:textSize="17sp"
                    android:inputType="number"
                    android:textColorHint="@color/hint_gray"
                    />
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_gray"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bt_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_radius_black"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="59dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/next"
            />

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.LinearLayoutCompat>